--- a/Osudpotro Clone/index.html
+++ b/Osudpotro Clone/index.html
@@ -101,7 +101,7 @@
           </a> -->
 
                 <div class="dropdown">
-                    <button class="dropbtn">More >></button>
+                    <button class="dropbtn">More &#187;</button>
                     <div class="dropdown-content">
                         <a href="#">Women's Products</a>
                         <a href="#">Kid's Item</a>
@@ -119,7 +119,92 @@
     <!-- navbar section end  -->
 
 
+    <!-- Banner Section Start -->
 
+    <section>
+
+        <div class="banner-class">
+
+            <img class="img-fluidv" style="width: 100%;" src="img/eid-salami-w-banner-1650443007380.webp" alt="">
+
+            <h1 class="bannaer-text">osudpotro: The Leading Online Pharmacy and Healthcare Platform of Bangladesh.</h1>
+        </div>
+
+    </section>
+
+
+    <!-- Banner Section End -->
+
+<!-- card Design start -->
+
+<div class="main">
+    <h1>Responsive Card Grid Layout</h1>
+    <ul class="cards">
+      <li class="cards_item">
+        <div class="card">
+          <div class="card_image"><img src="https://picsum.photos/500/300/?image=10"></div>
+          <div class="card_content">
+            <h2 class="card_title">Card Grid Layout</h2>
+            <p class="card_text">Demo of pixel perfect pure CSS simple responsive card grid layout</p>
+            <button class="btn card_btn">Read More</button>
+          </div>
+        </div>
+      </li>
+      <li class="cards_item">
+        <div class="card">
+          <div class="card_image"><img src="https://picsum.photos/500/300/?image=5"></div>
+          <div class="card_content">
+            <h2 class="card_title">Card Grid Layout</h2>
+            <p class="card_text">Demo of pixel perfect pure CSS simple responsive card grid layout</p>
+            <button class="btn card_btn">Read More</button>
+          </div>
+        </div>
+      </li>
+      <li class="cards_item">
+        <div class="card">
+          <div class="card_image"><img src="https://picsum.photos/500/300/?image=11"></div>
+          <div class="card_content">
+            <h2 class="card_title">Card Grid Layout</h2>
+            <p class="card_text">Demo of pixel perfect pure CSS simple responsive card grid layout</p>
+            <button class="btn card_btn">Read More</button>
+          </div>
+        </div>
+      </li>
+      <li class="cards_item">
+        <div class="card">
+          <div class="card_image"><img src="https://picsum.photos/500/300/?image=14"></div>
+          <div class="card_content">
+            <h2 class="card_title">Card Grid Layout</h2>
+            <p class="card_text">Demo of pixel perfect pure CSS simple responsive card grid layout</p>
+            <button class="btn card_btn">Read More</button>
+          </div>
+        </div>
+      </li>
+      <li class="cards_item">
+        <div class="card">
+          <div class="card_image"><img src="https://picsum.photos/500/300/?image=17"></div>
+          <div class="card_content">
+            <h2 class="card_title">Card Grid Layout</h2>
+            <p class="card_text">Demo of pixel perfect pure CSS simple responsive card grid layout</p>
+            <button class="btn card_btn">Read More</button>
+          </div>
+        </div>
+      </li>
+      <li class="cards_item">
+        <div class="card">
+          <div class="card_image"><img src="https://picsum.photos/500/300/?image=2"></div>
+          <div class="card_content">
+            <h2 class="card_title">Card Grid Layout</h2>
+            <p class="card_text">Demo of pixel perfect pure CSS simple responsive card grid layout</p>
+            <button class="btn card_btn">Read More</button>
+          </div>
+        </div>
+      </li>
+    </ul>
+  </div>
+  
+  <h3 class="made_by">Made with ♡</h3>
+<!-- card Design end -->
 
 
 </body>
