--- a/Osudpotro Clone/index.html
+++ b/Osudpotro Clone/index.html
@@ -357,16 +357,37 @@
 
 
 
-
-
-
-
-
-
-
-
     <!-- Shop By Category section End -->
 
+    <!-- Prescription Medicines start -->
+
+<section style="margin-top: 100px;">
+
+    <h1 class="Prescription-Header">Prescription Medicines</h1>
+
+<div class="parent">
+
+</div>
+
+
+
+
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- Prescription Medicines  end-->
 
 
 
