Prescription mobile view

--- a/Osudpotro Clone/index.html
+++ b/Osudpotro Clone/index.html
@@ -410,7 +410,7 @@
                             class="regular-price">৳12.00</label></p>
                 </div>
             </div>
-            <div class="ph-card">
+            <div class="ph-card card4">
                 <div class="discount">5%</div>
                 <img src="img/bisocor-1636289033432.webp" alt="">
                 <div class="details">
@@ -422,7 +422,7 @@
                 </div>
 
             </div>
-            <div class="ph-card">
+            <div class="ph-card card5">
                 <div class="discount">5%</div>
                 <img src="img/bizoran-1636288240602.webp" alt="">
                 <div class="details">
@@ -441,19 +441,10 @@
     </div>
 
 
+
+
+
     </section>
-
-
-
-
-
-
-
-
-
-
-
-
 
 
     <!-- Prescription Medicines  end-->
