Prescription medicines banner

--- a/Osudpotro Clone/index.html
+++ b/Osudpotro Clone/index.html
@@ -449,7 +449,31 @@
 
     <!-- Prescription Medicines  end-->
 
+    <!-- Prescription medicines bannar section start -->
 
+<div class="P-H-Banner">
+<div class="img-div">
+     <img class="p-h-banner-img" src="img/category-b.jpg" alt="">
+</div>
+
+
+ <div class="P-h-text-btn">
+
+    <div class="view-btn-div">
+        <a class="view-btn" href=""> View All</a>
+    </div>
+
+    <div class="product-text-div">
+<p class="product-text"> osudpotro provides Prescription medicines that require a medical prescription to be dispensed also offers online medicines and healthcare products home delivery in Dhaka as well as all over Bangladesh.</p>
+
+    </div>
+ </div>
+
+</div>
+
+
+
+    <!-- Prescription medicines bannar section  end -->
 
 
     <script src="js/add.js"></script>
