--- a/Osudpotro Clone/index.html
+++ b/Osudpotro Clone/index.html
@@ -1077,7 +1077,134 @@
     <!-- Order Medicines From  section  end -->
 
     <!-- About osudpotro section  start-->
+
+    <section style="margin-top: 100px;">
+        <div class="About-osudpotro-main-div">
+
+            <div>
+                <h4 class="bullet-point">Online Pharmacy</h4>
+
+                <p class="bullet-point-details ">Our online model pharmacy can be accessed easily through our website
+                    and apps available on
+                    <strong>Google Play Store</strong> and <strong>Apple App Store </strong>where customers can upload
+                    their prescription. Our medicine inventories are directly supplied form the largest pharmaceutical
+                    companies and thus we ensure <strong>longest expiry dates</strong> for our all medicines and
+                    products and also <strong>authentic medicines.</strong>The model pharmacies are supervised by
+                    <strong>A Category Pharmacists</strong> who ensures the best service for our customers. </p>
+            </div>
+
+
+            <div>
+                <h4 class="text-center">Medicine Delivery Method and Delivery Charge:</h4>
+
+                <div class="FooterContent__Table-sc-3q3ndh-0 cdhgLj row">
+                    <div class="column col-md-3">
+                        <div class="cell head">Delivery Type</div>
+                        <div class="cell">a. Regular Delivery</div>
+                        <div class="cell">b. Express Delivery</div>
+                        <div class="cell">c. Emergency Delivery</div>
+                    </div>
+                    <div class="column col-md-3">
+                        <div class="cell head">Applied Hours</div>
+                        <div class="cell">6:00 am.-11:00 p.m.</div>
+                        <div class="cell">11:00 pm.-7:00 a.m.</div>
+                        <div class="cell">10:00 am.- 11:00 pm.</div>
+                    </div>
+                    <div class="column col-md-3">
+                        <div class="cell head">Estimated delivery time</div>
+                        <div class="cell">1.5 hours-4.5 hours</div>
+                        <div class="cell">1 hours- 2.5 hours</div>
+                        <div class="cell">45 mins-1.5 hours</div>
+                    </div>
+                    <div class="column col-md-3">
+                        <div class="cell head">Price</div>
+                        <div class="cell">BDT 35</div>
+                        <div class="cell">BDT 200</div>
+                        <div class="cell">BDT 80</div>
+                    </div>
+                </div>
+
+            </div>
+
+
+            <div>
+                <h4 class="bullet-point">Delivery Type &amp; Schedule</h4>
+
+                <ul class="footer-list">
+                    <li>Regular Delivery (1.5 hours-4.5 hours)- 6:00 am.-11:00 p.m.</li>
+                    <li>Express Delivery (1 hours- 2.5 hours)- 11:00 pm.-7:00 a.m.</li>
+                    <li>Emergency Delivery (45 mins-1.5 hours)- 10:00 am.- 11:00 pm.</li>
+                </ul>
+            </div>
+
+
+            <div>
+                <h4 class="bullet-point">On Call Doctor</h4>
+
+                <p class="bullet-point-details ">Our expert and experienced pool of doctors are always ready to serve
+                    any callers with their problems. Patients can communicate in our social media platforms and take an
+                    appointment or directly take the service from the app. Our Online Doctor Consultant communicated and
+                    prescribes all patients accordingly and provides the Best Telemedicine Services as well. </p>
+            </div>
+
+
+
+
+        </div>
+
+
+    </section>
+
     <!-- About osudpotro section end -->
+
+
+    <!-- fotter section start -->
+    <!-- <footer style="margin-top: 100px;">
+
+        <!-- <div>
+
+            <div>
+                <img src="img/green-bg.webp" alt="" class="ghsdgf">
+            </div>
+
+            <div class="logo-div">
+
+                <div>1</div>
+                <div>2</div>
+             </div> 
+        </div>
+  -->
+
+  <!-- <section>
+    <div class="">
+        <div class="">
+            <img class="" src="img/green-bg.webp" alt="" />
+        </div>
+
+        <div class="P-h-text-btn aling-div">
+            <div class="product-text-div">
+                <img src="img/download.svg" alt="">
+            </div>
+
+            <div class="view-btn-div Women-view-btn">
+                <a class="view-btn" href=""> <span>View All</span></a>
+            </div>
+        </div>
+    </div>
+</section> -->
+
+
+
+     
+
+
+
+    <!-- </footer> --> 
+
+
+    
+
+    <!-- fotter section end -->
 
     <script src="js/add.js"></script>
 </body>
